--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.3",
+    "@angular/animations": "^9.1.7",
     "@angular/common": "~9.1.3",
     "@angular/compiler": "~9.1.3",
     "@angular/core": "~9.1.3",
@@ -23,6 +23,7 @@
     "bootstrap": "^4.4.1",
     "firebase": "^7.14.2",
     "jquery": "^1.9.1",
+    "ngx-toastr": "^12.0.1",
     "popper.js": "^1.16.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
